--- a/app/src/main/res/layout/activity_story_player.xml
+++ b/app/src/main/res/layout/activity_story_player.xml
@@ -7,77 +7,93 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".StoryPlayerActivity">
 
-    <!--below is the image view where we will
-        be displaying images in our stories-->
-    <ImageView
-        android:id="@+id/image"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#303030"
-        android:contentDescription="@null" />
+        android:layout_height="match_parent">
 
-    <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/story_video_view" />
+        <!--below is the image view where we will
+       be displaying images in our stories-->
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#303030"
+            android:contentDescription="@null" />
 
-    <!--below widget is use to create indicator for our stories at top-->
-    <jp.shts.android.storiesprogressview.StoriesProgressView
-        android:id="@+id/stories"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_gravity="top"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+        <VideoView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/story_video_view" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        <!--below widget is use to create indicator for our stories at top-->
+        <jp.shts.android.storiesprogressview.StoriesProgressView
+            android:id="@+id/stories"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_gravity="top"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/person"
             app:civ_border_width="1dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:civ_border_color="#FFFFFF"/>
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/usernameTV"
+            app:layout_constraintStart_toEndOf="@id/profile_image"
+            app:layout_constraintTop_toTopOf="@id/profile_image"
+            android:text="Shubham Thorat"
+            android:textColor="@color/white"
+            android:layout_marginStart="10dp"
+            android:textSize="15sp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/usernameTV"
-                android:text="Shubham Thorat"
-                android:textColor="@color/white"
-                android:layout_marginStart="10dp"
-                android:textSize="15sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/storyTimeTV"
+            android:text="1hr Ago"
+            app:layout_constraintStart_toStartOf="@id/usernameTV"
+            app:layout_constraintTop_toBottomOf="@id/usernameTV"
+            android:textColor="@color/white"
+            android:textSize="12sp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/storyTimeTV"
-                android:text="1hr Ago"
-                android:textColor="@color/white"
-                android:layout_marginStart="10dp"
-                android:textSize="12sp"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/btnStoryClose"
+            android:src="@drawable/ic_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/stories"
+            android:layout_marginEnd="3dp"
+            android:layout_marginTop="10dp"/>
 
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_arrow_up"
+            android:id="@+id/ivArrowUp"/>
 
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/viewers_bottom_sheet"/>
 
