--- a/app/src/main/res/layout/activity_modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/activity_modal_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ModalBottomSheetActivity">
+    tools:context=".bottomSheet.ModalBottomSheetActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
