--- a/app/src/main/res/layout/fragment_modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ModalBottomSheetFragment">
+    tools:context=".bottomSheet.ModalBottomSheetFragment">
 
     <!-- Cancel option -->
     <TextView
