implemented camera functionality from scratch and preview screen for captured images and videos

--- a/app/src/main/res/layout/story_alert_dialog.xml
+++ b/app/src/main/res/layout/story_alert_dialog.xml
@@ -26,40 +26,11 @@
             android:id="@+id/tvCamera"
             android:layout_gravity="center_vertical"
             android:textSize="16sp"
-            android:text="Capture image"
+            android:text="Open Camera"
             android:layout_marginStart="15dp" />
 
     </LinearLayout>
 
-    <!-- record a video -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp"
-        android:id="@+id/llRecordVideo"
-        app:layout_constraintTop_toBottomOf="@id/llCaptureImage"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <!-- Record video -->
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_video"
-            android:id="@+id/ivVideo"
-            app:tint="@color/black" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvVideo"
-            android:textSize="16sp"
-            android:layout_gravity="center_vertical"
-            android:text="Record video"
-            android:layout_marginStart="16dp" />
-
-    </LinearLayout>
 
     <!-- select a image -->
     <LinearLayout
@@ -68,7 +39,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:id="@+id/llSelectMedia"
-        app:layout_constraintTop_toBottomOf="@id/llRecordVideo"
+        app:layout_constraintTop_toBottomOf="@id/llCaptureImage"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
