--- a/app/src/main/res/layout/fragment_media_preview.xml
+++ b/app/src/main/res/layout/fragment_media_preview.xml
@@ -7,14 +7,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_cancel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"
+        android:focusable="true"
+        android:focusedByDefault="true"
+        android:layout_marginStart="15dp"
+        android:id="@+id/btnDeselect"/>
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/btnAddText"
+        android:visibility="invisible"
+        android:src="@drawable/ic_text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tvDoneTypingText"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:id="@+id/tvDoneTypingText"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"/>
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/btnDeselect"
         app:layout_constraintBottom_toTopOf="@id/btnAddToStory"
-        android:scaleType="centerCrop"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/ivImgPreview"/>
+        android:id="@+id/rl_preview_img">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/ivImgPreview"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello"
+            android:visibility="gone"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/teal_700"
+            android:layout_centerInParent="true"
+            android:id="@+id/tvDrag"/>
+
+    </RelativeLayout>
 
     <VideoView
         android:id="@+id/VideoPreview"
@@ -27,18 +83,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="1dp" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_cancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="15dp"
-        android:focusable="true"
-        android:focusedByDefault="true"
-        android:layout_marginStart="15dp"
-        android:id="@+id/btnDeselect"/>
 
     <TextView
         android:layout_width="0dp"
