--- a/app/src/main/res/layout/fragment_media_preview.xml
+++ b/app/src/main/res/layout/fragment_media_preview.xml
@@ -51,24 +51,13 @@
         app:layout_constraintBottom_toTopOf="@id/btnAddToStory"
         android:id="@+id/rl_preview_img">
 
-        <ImageView
+        <com.github.chrisbanes.photoview.PhotoView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/ivImgPreview"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello"
-            android:visibility="gone"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="@color/teal_700"
-            android:layout_centerInParent="true"
-            android:id="@+id/tvDrag"/>
 
     </RelativeLayout>
 
