--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,47 +12,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/image_capture_button"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="50dp"
-        android:elevation="2dp"
-        android:visibility="invisible"
-        android:text="Take photo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/vertical_centerline" />
-
-    <Button
-        android:id="@+id/video_capture_button"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="50dp"
-        android:elevation="2dp"
-        android:visibility="invisible"
-        android:text="Capture video"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/vertical_centerline" />
-
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/btnRotateCamera"
         android:src="@drawable/ic_switch_camera"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/video_capture_button"
+        android:visibility="visible"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_centerline"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".50" />
+        android:clickable="true"
+        android:id="@+id/captureMedia"
+        android:visibility="visible"
+        android:src="@drawable/ic_default_camera_capture"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40dp"
+        android:focusable="true" />
 
+    <!-- video recording progress -->
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="80dp"
+        app:trackThickness="10dp"
+        android:visibility="visible"
+        app:indicatorDirectionCircular="clockwise"
+        app:indicatorSize="80dp"
+        android:max="100"
+        app:trackCornerRadius="10dp"
+        android:progress="0"
+        android:indeterminate="false"
+        android:id="@+id/videoProgress"
+        app:indicatorColor="@color/yellow"
+        app:layout_constraintStart_toStartOf="@id/captureMedia"
+        app:layout_constraintEnd_toEndOf="@id/captureMedia"
+        app:layout_constraintTop_toTopOf="@id/captureMedia"
+        app:layout_constraintBottom_toBottomOf="@id/captureMedia"
+        android:layout_height="80dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
