--- a/app/src/main/res/layout/activity_story_player.xml
+++ b/app/src/main/res/layout/activity_story_player.xml
@@ -17,7 +17,8 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#303030"
+            android:background="@color/red"
+            android:scaleType="centerCrop"
             android:contentDescription="@null" />
 
         <VideoView
