--- a/app/src/main/res/layout/activity_story_player.xml
+++ b/app/src/main/res/layout/activity_story_player.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/red"
+            android:elevation="2dp"
+            android:translationZ="2dp"
             android:scaleType="centerCrop"
             android:contentDescription="@null" />
 
