--- a/app/src/main/res/drawable/black_blur_foreground.xml
+++ b/app/src/main/res/drawable/black_blur_foreground.xml
@@ -2,8 +2,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black"/>
-    <corners
-        android:topRightRadius="40dp"
-        android:topLeftRadius="40dp"/>
+
+    <solid
+        android:color="#60000000"/>
+
 </shape>
