--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:id="@+id/captureMedia"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:src="@drawable/ic_default_camera_capture"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
