--- a/app/src/main/res/layout/activity_story_player.xml
+++ b/app/src/main/res/layout/activity_story_player.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".story.StoryPlayerActivity">
 
@@ -17,20 +18,25 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/red"
-            android:elevation="2dp"
-            android:translationZ="2dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginBottom="60dp"
             android:scaleType="centerCrop"
             android:contentDescription="@null" />
 
-        <VideoView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/story_video_view" />
+            android:layout_height="match_parent">
+
+            <VideoView
+                android:id="@+id/story_video_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="65dp"
+                android:layout_marginBottom="60dp"
+                android:elevation="2dp"
+                android:translationZ="2dp" />
+        </RelativeLayout>
 
         <!--below widget is use to create indicator for our stories at top-->
         <jp.shts.android.storiesprogressview.StoriesProgressView
@@ -45,8 +51,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/person"
             app:civ_border_width="1dp"
             android:layout_marginStart="16dp"
