--- a/app/src/main/res/layout/story_item_layout.xml
+++ b/app/src/main/res/layout/story_item_layout.xml
@@ -2,86 +2,72 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_width="100dp"
+    android:layout_height="135dp">
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="@drawable/ripple"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="5dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewStationary"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:elevation="8dp"
-            app:cardBackgroundColor="#49B0E2"
-            app:cardCornerRadius="22dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/imgCard"
+        app:cardCornerRadius="40dp"
+        android:layout_width="80dp"
+        app:cardBackgroundColor="#00000000"
+        android:background="@drawable/gradient_drawable"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="80dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="match_parent"
+            android:id="@+id/imgProfile"
+            android:padding="2dp"
+            android:visibility="visible"
+            android:background="@color/white"
+            android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/person"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:elevation="8dp"
-                app:cardCornerRadius="22dp"
-                app:contentPadding="5dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="80dp"
+            android:id="@+id/imgProfileStatus"
+            android:padding="5dp"
+            android:visibility="gone"
+            android:background="@drawable/gradient_drawable"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:src="@drawable/person"/>
+    </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:elevation="8dp"
-                    app:cardCornerRadius="22dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:elevation="10dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/person" />
-
-                </androidx.cardview.widget.CardView>
-
-            </androidx.cardview.widget.CardView>
-
-        </androidx.cardview.widget.CardView>
-
-    </FrameLayout>
-
+    <!-- add story icon -->
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginBottom="25dp"
-        android:visibility="invisible"
-        android:background="@drawable/ic_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout" />
+        android:id="@+id/profileStoryAddIcon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        android:elevation="2dp"
+        android:translationZ="2dp"
+        android:background="@drawable/ic_add_story"
+        android:layout_marginStart="-22dp"
+        android:layout_marginBottom="-5dp"
+        app:layout_constraintBottom_toBottomOf="@id/imgCard"
+        app:layout_constraintStart_toEndOf="@id/imgCard" />
 
+    <!-- user name -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/username"
         android:text="Siddy"
+        android:maxLines="1"
         android:textColor="#303030"
+        android:ellipsize="end"
         android:fontFamily="@font/poppins_semibold"
         android:includeFontPadding="false"
-        android:layout_marginTop="5dp"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/imgCard"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintStart_toStartOf="@id/imgCard"
+        app:layout_constraintTop_toBottomOf="@+id/imgCard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
